--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,7 +45,14 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-info": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
     "@types/classnames": "^2.2.10",
-    "@types/react-transition-group": "^4.2.4"
+    "@types/react-transition-group": "^4.2.4",
+    "@types/storybook__addon-info": "^5.2.1",
+    "react-docgen-typescript-loader": "^3.7.2"
   }
 }
